# vscode_cpp_cmake_example_project

./: .clangd  .gitignore  CMakeLists.txt  README.md  clangd.in  install_CMake_on_macOS.sh  launch.json.in  settings.json.in  sources.md
res/: example_output-windows_11-simple.txt
src/: FluentBuilder.cpp  FluentBuilder.h  main.cpp
utils/: add_git_to_path-windows.sh
